--- a/app/globals.css
+++ b/app/globals.css
@@ -4,16 +4,26 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    /* --background: 0 0% 100%; */
+    --background: 39, 27%, 95%;
+
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    /* --primary: 222.2 47.4% 11.2%; */
+    --primary: 0, 0%, 100%;
+
+    /* --primary-foreground: 210 40% 98%; */
+    --primary-foreground: 216, 13%, 16%;
+
+    /* --secondary: 210 40% 96.1%; */
+    --secondary: 216, 13%, 16%;
+
+    /* --secondary-foreground: 222.2 47.4% 11.2%; */
+    --secondary-foreground: 45, 98%, 56%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
@@ -61,7 +71,7 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border p-0 m-0;
   }
   body {
     @apply bg-background text-foreground;
